compiler/testData/diagnostics/tests/backingField/ReadForwardInPropertyInitializer.kt
class ReadForward() {
    val a = <!BACKING_FIELD_USAGE_DEPRECATED, UNINITIALIZED_VARIABLE!>$b<!>
    val b = 1
}
